# swift-llvm-bindings

./: .gitignore  CMakeLists.txt  CODEOWNERS  Package.swift  README.md
Sources/: CMakeLists.txt
Sources/Clang/: CMakeLists.txt  Clang_AST.apinotes
Sources/LLVM/: CMakeLists.txt  LLVM_Utils.apinotes  LLVM_Utils.swift
Sources/LLVM_Utils/: CMakeLists.txt
